--- a/app_mxh_manga/app/src/main/res/layout/item_story_compose.xml
+++ b/app_mxh_manga/app/src/main/res/layout/item_story_compose.xml
@@ -8,8 +8,8 @@
 
     <FrameLayout
         android:id="@+id/frameLayout"
-        android:layout_width="80dp"
-        android:layout_height="100dp"
+        android:layout_width="90dp"
+        android:layout_height="120dp"
         android:background="@drawable/border"
         android:padding="2dp"
         android:layout_alignParentTop="true"
@@ -34,15 +34,17 @@
 
     <TextView
         android:id="@+id/tv_name"
+        style="@style/Theme_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_toEndOf="@+id/frameLayout"
-        android:maxLines="2"
-        android:text=""
-        style="@style/Theme_textView"
         android:ellipsize="end"
+        android:maxLines="2"
+        android:textSize="13sp"
+        android:text="dddddddd\ndddđ"
         android:textStyle="bold" />
 
     <TextView
@@ -54,10 +56,11 @@
         android:layout_marginBottom="51dp"
         android:layout_toEndOf="@id/frameLayout"
         android:background="@android:color/transparent"
-        android:text=""
+        android:text="ddddddddddddđ"
         android:textColor="#FF9800"
-        android:maxLines="1"
+        android:lines="1"
         android:ellipsize="end"
+        android:textSize="13sp"
         style="@style/Theme_textView"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:textStyle="bold"
                 android:background="@android:color/transparent"
                 android:maxLines="1"
@@ -89,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Chap"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:textColor="@color/black_50"
                 android:background="@android:color/transparent"
                 android:maxLines="1"
@@ -114,7 +117,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:textStyle="bold"
                 android:ellipsize="end"
                 android:background="@android:color/transparent"
@@ -124,7 +127,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Lượt đọc"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:textColor="@color/black_50"
                 android:ellipsize="end"
                 android:background="@android:color/transparent"
@@ -149,7 +152,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:textStyle="bold"
                 android:background="@android:color/transparent"
                 android:ellipsize="end"
@@ -159,7 +162,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Số like"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:textColor="@color/black_50"
                 android:background="@android:color/transparent"
                 android:ellipsize="end"
@@ -184,7 +187,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:textStyle="bold"
                 android:background="@android:color/transparent"
                 android:ellipsize="end"
@@ -194,7 +197,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Bình luận"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:textColor="@color/black_50"
                 android:background="@android:color/transparent"
                 android:ellipsize="end"
